--- a/api/qsharp/microsoft.quantum.arithmetic.comparegti.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.comparegti.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.arithmetic.comparegti
 name: CompareGTI
 type: operation
-namespace: Microsoft.Quantum.Arithmetic
-summary: 整数比较的包装器`result = x > y`：。
+namespace: microsoft.quantum.arithmetic
+summary: 整数比较的包装器： `result = x > y` 。
 syntax: 'operation CompareGTI (xs : Microsoft.Quantum.Arithmetic.LittleEndian, ys : Microsoft.Quantum.Arithmetic.LittleEndian, result : Qubit) : Unit'
 input:
   content: '(xs : Microsoft.Quantum.Arithmetic.LittleEndian, ys : Microsoft.Quantum.Arithmetic.LittleEndian, result : Qubit)'
@@ -27,9 +27,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: c7db5342b4a01dcb959b12c87dc801b7b7a8f2b3
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: ca2177b4fc373246c9c018bb3ab2d23fb68cb0f6
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82679790"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89342136"
