--- a/api/qsharp/microsoft.quantum.extensions.math.maxb.yml
+++ b/api/qsharp/microsoft.quantum.extensions.math.maxb.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.math.maxb
 name: MaxB
 type: function
-namespace: Microsoft.Quantum.Extensions.Math
+namespace: microsoft.quantum.extensions.math
 summary: MaxB 已被弃用。 请改用 @"microsoft.quantum.math.maxl"。
 syntax: 'function MaxB (a : BigInt, b : BigInt) : BigInt'
 input:
@@ -20,9 +20,9 @@ output:
   - isPrimitive: true
     uid: BigInt
 metadata:
-  ms.openlocfilehash: fa6c7ffa6e55e4351afc4de225b8e92d19104a4c
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: cc900aff74f9743e19d5434009ed0f8f796bdd43
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686250"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89348256"
