--- a/api/qsharp/microsoft.quantum.simulation.sumgeneratorsystems.yml
+++ b/api/qsharp/microsoft.quantum.simulation.sumgeneratorsystems.yml
@@ -2,27 +2,27 @@
 uid: microsoft.quantum.simulation.sumgeneratorsystems
 name: SumGeneratorSystems
 type: function
-namespace: Microsoft.Quantum.Simulation
-summary: 添加多`GeneratorSystem`个创建新 GeneratorSystem 的。
+namespace: microsoft.quantum.simulation
+summary: 添加多个 `GeneratorSystem` 创建新 GeneratorSystem 的。
 syntax: 'function SumGeneratorSystems (generatorSystems : Microsoft.Quantum.Simulation.GeneratorSystem[]) : Microsoft.Quantum.Simulation.GeneratorSystem'
 input:
   content: '(generatorSystems : Microsoft.Quantum.Simulation.GeneratorSystem[])'
   types:
   - name: generatorSystems
-    summary: 一个类型为 `GeneratorSystem[]` 的数组。
+    summary: '`GeneratorSystem[]` 类型的数组。'
     isArray: true
     uid: microsoft.quantum.simulation.generatorsystem
 output:
   content: Microsoft.Quantum.Simulation.GeneratorSystem
   types:
-  - summary: 一个`GeneratorSystem` ，它表示作为输入生成器系统的总和的系统。
+  - summary: 一个， `GeneratorSystem` 它表示作为输入生成器系统的总和的系统。
     uid: microsoft.quantum.simulation.generatorsystem
 seeAlso:
 - microsoft.quantum.canon.generatorsystem
 metadata:
-  ms.openlocfilehash: 5474e35cb303a6f490794a77483aafd609724eaa
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: cf4fe3793578c1050f7a95773112985ad671a695
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82687332"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89328383"
