--- a/api/qsharp/microsoft.quantum.arithmetic.applyphaseleoperationonle.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.applyphaseleoperationonle.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.arithmetic.applyphaseleoperationonle
 name: ApplyPhaseLEOperationOnLE
 type: operation
-namespace: Microsoft.Quantum.Arithmetic
-summary: 应用一个在类型<xref:microsoft.quantum.arithmetic.littleendian> <xref:microsoft.quantum.arithmetic.phaselittleendian>为的目标寄存器上采用注册为输入的操作。
-remarks: 通过使用将寄存器转换`PhaseLittleEndian`为<xref:microsoft.quantum.canon.qftle> ，然后在应用后将其返回到其原始表示形式`op`。
+namespace: microsoft.quantum.arithmetic
+summary: 应用一个 <xref:microsoft.quantum.arithmetic.littleendian> 在类型为的目标寄存器上采用注册为输入的操作 <xref:microsoft.quantum.arithmetic.phaselittleendian> 。
+remarks: 通过使用将寄存器转换为 `PhaseLittleEndian` <xref:microsoft.quantum.canon.qftle> ，然后在应用后将其返回到其原始表示形式 `op` 。
 syntax: 'operation ApplyPhaseLEOperationOnLE (op : (Microsoft.Quantum.Arithmetic.PhaseLittleEndian => Unit), target : Microsoft.Quantum.Arithmetic.LittleEndian) : Unit'
 input:
   content: '(op : (Microsoft.Quantum.Arithmetic.PhaseLittleEndian => Unit), target : Microsoft.Quantum.Arithmetic.LittleEndian)'
@@ -32,9 +32,9 @@ seeAlso:
 - microsoft.quantum.canon.applyphaseleoperationonlea
 - microsoft.quantum.canon.applyphaseleoperationonleca
 metadata:
-  ms.openlocfilehash: c4923ffd3e0c2ad2321003fad592120b5dcb585f
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 4ff03eced84ef61914b2e9bef2ec2b92826e6149
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82676882"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89327822"
