--- a/api/qsharp/microsoft.quantum.arithmetic.applyreversedopbea.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.applyreversedopbea.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.arithmetic.applyreversedopbea
 name: ApplyReversedOpBEA
 type: operation
-namespace: Microsoft.Quantum.Arithmetic
+namespace: microsoft.quantum.arithmetic
 summary: 使用小 endian 格式将使用大字节序输入的操作应用到寄存器编码的无符号整数。
 syntax: 'operation ApplyReversedOpBEA (op : (Microsoft.Quantum.Arithmetic.BigEndian => Unit is Adj), register : Microsoft.Quantum.Arithmetic.LittleEndian) : Unit'
 input:
@@ -35,9 +35,9 @@ seeAlso:
 - applyreversedopbec
 - applyreversedopbeca
 metadata:
-  ms.openlocfilehash: 7902b17097f6c5f8e249ceefc2c89319a85b344d
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 7ffafefeb78686279dc33c684f315d04af58418e
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82679992"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89327601"
