--- a/api/qsharp/microsoft.quantum.arithmetic.applyreversedopbec.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.applyreversedopbec.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.arithmetic.applyreversedopbec
 name: ApplyReversedOpBEC
 type: operation
-namespace: Microsoft.Quantum.Arithmetic
+namespace: microsoft.quantum.arithmetic
 summary: 使用小 endian 格式将使用大字节序输入的操作应用到寄存器编码的无符号整数。
 syntax: 'operation ApplyReversedOpBEC (op : (Microsoft.Quantum.Arithmetic.BigEndian => Unit is Ctl), register : Microsoft.Quantum.Arithmetic.LittleEndian) : Unit'
 input:
@@ -35,9 +35,9 @@ seeAlso:
 - applyreversedopbea
 - applyreversedopbeca
 metadata:
-  ms.openlocfilehash: 60a66cbd19c01611d2c751fbb606074ffaa3a4c0
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: b2cd2d53f3edc21e73c9d60c0f2fb5ec462369c5
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82675275"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89327618"
