--- a/api/qsharp/microsoft.quantum.arithmetic.applyreversedoplea.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.applyreversedoplea.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.arithmetic.applyreversedoplea
 name: ApplyReversedOpLEA
 type: operation
-namespace: Microsoft.Quantum.Arithmetic
+namespace: microsoft.quantum.arithmetic
 summary: 应用一个操作，该操作将使用大字节序格式对无符号整数进行寄存器编码。
 syntax: 'operation ApplyReversedOpLEA (op : (Microsoft.Quantum.Arithmetic.LittleEndian => Unit is Adj), register : Microsoft.Quantum.Arithmetic.BigEndian) : Unit'
 input:
@@ -35,9 +35,9 @@ seeAlso:
 - applyreversedoplec
 - applyreversedopleca
 metadata:
-  ms.openlocfilehash: 9fd7f0def418635a196809e8c5f5180bf4ce2e38
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 39ae1376a28e8ecc40a92b2c14bd2c4ce6fcd86a
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82679951"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89327431"
