--- a/api/qsharp/microsoft.quantum.arithmetic.bigendian.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.bigendian.yml
@@ -2,14 +2,14 @@
 uid: microsoft.quantum.arithmetic.bigendian
 name: BigEndian
 type: newtype
-namespace: Microsoft.Quantum.Arithmetic
-summary: 注册以大字节序顺序编码无符号整数。 带有索引`0`的 qubit 对无符号整数的最高位进行编码。
-remarks: 与文档`BigEndian`中`BE`的缩写相同。
+namespace: microsoft.quantum.arithmetic
+summary: 注册以大字节序顺序编码无符号整数。 带有索引的 qubit 对 `0` 无符号整数的最高位进行编码。
+remarks: '`BigEndian`与 `BE` 文档中的缩写相同。'
 syntax: newtype BigEndian = Qubit[];
 metadata:
-  ms.openlocfilehash: 9c59021955710a182a2315d4e848016f8d13d6fa
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: b8aca5fb596ff61064b7542785d245a3ef7ecace
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82679860"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89327584"
