--- a/api/qsharp/microsoft.quantum.arithmetic.carry.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.carry.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.arithmetic.carry
 name: Carry
 type: operation
-namespace: Microsoft.Quantum.Arithmetic
-summary: 实现可逆的执行入口。 给定`carryIn`一个在 qubit 中进行编码的传入位，并在`summand1`和`summand2`中编码两个被加数位，计算`carryIn`的`summand1`按`summand2`位 xor， `summand2`并在 qubit 中将为 xored 到 qubit `carryOut`。
+namespace: microsoft.quantum.arithmetic
+summary: 实现可逆的执行入口。 给定一个在 qubit 中进行编码的传入位， `carryIn` 并在和中编码两个被加数位， `summand1` 计算的 `summand2` 按位 xor `carryIn` ， `summand1` 并 `summand2` 在 qubit 中将 `summand2` 为 xored 到 qubit `carryOut` 。
 syntax: 'operation Carry (carryIn : Qubit, summand1 : Qubit, summand2 : Qubit, carryOut : Qubit) : Unit'
 input:
   content: '(carryIn : Qubit, summand1 : Qubit, summand2 : Qubit, carryOut : Qubit)'
@@ -17,7 +17,7 @@ input:
     isPrimitive: true
     uid: Qubit
   - name: summand2
-    summary: 第二个被加数 qubit 被替换为与`summand1`和`summand2`之和的下位。
+    summary: 第二个被加数 qubit 被替换为与和之和的下 `summand1` 位 `summand2` 。
     isPrimitive: true
     uid: Qubit
   - name: carryOut
@@ -33,9 +33,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 3fa18b56fb242e76a88a23af02b3ebe7e5cc57d4
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: b620fa934d3e40772c9a55eda317449e3329a6d5
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82679836"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89327397"
