--- a/api/qsharp/microsoft.quantum.arithmetic.evaluatepolynomialfxp.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.evaluatepolynomialfxp.yml
@@ -2,14 +2,14 @@
 uid: microsoft.quantum.arithmetic.evaluatepolynomialfxp
 name: EvaluatePolynomialFxP
 type: operation
-namespace: Microsoft.Quantum.Arithmetic
+namespace: microsoft.quantum.arithmetic
 summary: 计算定点表示形式的多项式。
 syntax: 'operation EvaluatePolynomialFxP (coefficients : Double[], fpx : Microsoft.Quantum.Arithmetic.FixedPoint, result : Microsoft.Quantum.Arithmetic.FixedPoint) : Unit'
 input:
   content: '(coefficients : Double[], fpx : Microsoft.Quantum.Arithmetic.FixedPoint, result : Microsoft.Quantum.Arithmetic.FixedPoint)'
   types:
   - name: coefficients
-    summary: 多项式的系数为 double 数组，即数组 $ [a_0，a_1，...，a_d] $ 表示多项式 $P （x） = a_0 + a_1 x + \cdots + a_d x ^ d $。
+    summary: 多项式的系数为 double 数组，即数组 $ [a_0，a_1，...，a_d] $ for 多项式 $P (x) = a_0 + a_1 x + \cdots + a_d x ^ d $。
     isArray: true
     isPrimitive: true
     uid: Double
@@ -17,7 +17,7 @@ input:
     summary: 为其计算多项式的定点数。
     uid: microsoft.quantum.arithmetic.fixedpoint
   - name: result
-    summary: 输出固定点数，其中包含 $P （x） $。 最初必须处于 $ \ket{0}$ 状态。
+    summary: 将保留 $P (x) $ 的定点数。 最初必须处于 $ \ket {0} $ 状态。
     uid: microsoft.quantum.arithmetic.fixedpoint
 output:
   content: Unit
@@ -28,9 +28,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 7907702d8919060c630ce410d1cfcb995b4ed37a
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 5a30a25c7e11c2000abeb9ac4613385666c660fb
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82679644"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89342017"
