--- a/api/qsharp/microsoft.quantum.arithmetic.greaterthan.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.greaterthan.yml
@@ -2,19 +2,19 @@
 uid: microsoft.quantum.arithmetic.greaterthan
 name: GreaterThan
 type: operation
-namespace: Microsoft.Quantum.Arithmetic
+namespace: microsoft.quantum.arithmetic
 summary: >-
   对编码到 qubit 寄存器中的两个整数应用大于比较，并根据比较结果翻转目标 qubit。
 
 
   严格大于比较两个整数 $x $ 和 $y $，并以 qubit 寄存器 xs 和 y) 编码。 如果 $x > y $，则会翻转结果 qubit，否则结果 qubit 将保留其状态。
-remarks: 使用 $x-y = （x ' + y） ' $ 的技巧，其中 ' 表示一个补码。
+remarks: 使用 $x-y = (x ' + y) "$，其中，表示一个的补码。
 syntax: 'operation GreaterThan (xs : Microsoft.Quantum.Arithmetic.LittleEndian, ys : Microsoft.Quantum.Arithmetic.LittleEndian, result : Qubit) : Unit'
 references: >-
   - Steven Cuccaro、Thomas Draper、Samuel Kutin、David Petrie Moulton： "A 新的量程波纹-携带加法线路"，2004。
     https://arxiv.org/abs/quant-ph/0410184v1
 
-  - Thomas Haener，圣马丁 Roetteler，Krysta Svore： "使用 2n + 2 qubits 和基于 Toffoli 的模块乘法进行因式分解"，2016https://arxiv.org/abs/1611.07995
+  - Thomas Haener，圣马丁 Roetteler，Krysta Svore： "使用 2n + 2 qubits 和基于 Toffoli 的模块乘法进行因式分解"，2016 https://arxiv.org/abs/1611.07995
 input:
   content: '(xs : Microsoft.Quantum.Arithmetic.LittleEndian, ys : Microsoft.Quantum.Arithmetic.LittleEndian, result : Qubit)'
   types:
@@ -37,9 +37,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 64c96858ea4bf1449a5ddd18f0f7cca45d09fb17
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: b6e2a3faab9db052cf77b987e5d7ba1578eb4081
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82679602"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89341932"
