--- a/api/qsharp/microsoft.quantum.arithmetic.littleendianasbigendian.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.littleendianasbigendian.yml
@@ -2,24 +2,24 @@
 uid: microsoft.quantum.arithmetic.littleendianasbigendian
 name: LittleEndianAsBigEndian
 type: function
-namespace: Microsoft.Quantum.Arithmetic
-summary: 通过反转`LittleEndian` qubit 排序将 qubit `BigEndian`寄存器转换为 qubit 寄存器。
+namespace: microsoft.quantum.arithmetic
+summary: '`LittleEndian`通过反转 qubit 排序将 qubit 寄存器转换为 `BigEndian` qubit 寄存器。'
 syntax: 'function LittleEndianAsBigEndian (input : Microsoft.Quantum.Arithmetic.LittleEndian) : Microsoft.Quantum.Arithmetic.BigEndian'
 input:
   content: '(input : Microsoft.Quantum.Arithmetic.LittleEndian)'
   types:
   - name: input
-    summary: Qubit 寄存器`LittleEndian` 。
+    summary: Qubit 寄存器 `LittleEndian` 。
     uid: microsoft.quantum.arithmetic.littleendian
 output:
   content: Microsoft.Quantum.Arithmetic.BigEndian
   types:
-  - summary: Qubit 寄存器`BigEndian` 。
+  - summary: Qubit 寄存器 `BigEndian` 。
     uid: microsoft.quantum.arithmetic.bigendian
 metadata:
-  ms.openlocfilehash: 179ed8c442a92cee65cab540b83921a4dfb99002
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 014b80a8cb065f6900209a33f599053913ce9c68
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82676824"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89341881"
