--- a/api/qsharp/microsoft.quantum.canon.uncurriedopca.yml
+++ b/api/qsharp/microsoft.quantum.canon.uncurriedopca.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.uncurriedopca
 name: UncurriedOpCA
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   给定一个返回操作的函数，返回一个将两个输入作为元组的新操作。
 
-  修饰符`CA`指示操作可以控制和 adjointable。
+  修饰符 `CA` 指示操作可以控制和 adjointable。
 syntax: "function UncurriedOpCA (curriedOp : ('T -> ('U => Unit is Ctl + Adj))) : (('T, 'U) => Unit is Ctl + Adj)"
 input:
   content: "(curriedOp : ('T -> ('U => Unit is Ctl + Adj)))"
@@ -35,7 +35,7 @@ input:
 output:
   content: (('T, 'U) => Unit is Ctl + Adj)
   types:
-  - summary: 与等效的`op` `op(t, u)`新操作`(curriedOp(t))(u)`。
+  - summary: 与 `op` 等效的新操作 `op(t, u)` `(curriedOp(t))(u)` 。
     isOperation: true
     input:
       types:
@@ -58,9 +58,9 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.uncurryop
 metadata:
-  ms.openlocfilehash: aa04fce36dcfb989e109ab791822e83fba3cd9bc
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: cc2ac733e8cdc2d4e21e55e87fa624385aaf9724
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677962"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89354682"
