--- a/api/qsharp/microsoft.quantum.canon.xor.yml
+++ b/api/qsharp/microsoft.quantum.canon.xor.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.xor
 name: XOR
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: 不推荐使用 XOR。 请改用 @"microsoft.quantum.logical.xor"。
 syntax: 'function XOR (bit1 : Bool, bit2 : Bool) : Bool'
 input:
@@ -20,9 +20,9 @@ output:
   - isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: ef745c2f970c9f610a465cf9d17b11bbc6cad568
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: f94a036c8c0de34676a36bfc515acf2f3bcdcd01
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677789"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89354631"
