--- a/api/qsharp/microsoft.quantum.characterization.discretephaseestimationiteration.yml
+++ b/api/qsharp/microsoft.quantum.characterization.discretephaseestimationiteration.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.characterization.discretephaseestimationiteration
 name: DiscretePhaseEstimationIteration
 type: operation
-namespace: Microsoft.Quantum.Characterization
-summary: 使用单一 oracle 的整数幂，执行迭代（经典控制）阶段估算算法的单个迭代。
+namespace: microsoft.quantum.characterization
+summary: 使用单一 oracle 的整数幂，对迭代 (经典控制的) 阶段估算算法执行单个迭代。
 syntax: 'operation DiscretePhaseEstimationIteration (oracle : Microsoft.Quantum.Oracles.DiscreteOracle, power : Int, theta : Double, targetState : Qubit[], controlQubit : Qubit) : Unit'
 input:
   content: '(oracle : Microsoft.Quantum.Oracles.DiscreteOracle, power : Int, theta : Double, targetState : Qubit[], controlQubit : Qubit)'
@@ -37,9 +37,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 2551bbd6a48c0d1b6b9f5b56d44b834989a8d13c
-  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
+  ms.openlocfilehash: f7b36d100335ecaff11506ba2cedfb0c2a8e7af2
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/02/2020
-  ms.locfileid: "85885338"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89354614"
