--- a/api/qsharp/microsoft.quantum.characterization.estimatefrequency.yml
+++ b/api/qsharp/microsoft.quantum.characterization.estimatefrequency.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.characterization.estimatefrequency
 name: EstimateFrequency
 type: operation
-namespace: Microsoft.Quantum.Characterization
-summary: 考虑到准备和度量，通过执行给定数量的试验来估算度量成功`Zero`（返回）的频率。
+namespace: microsoft.quantum.characterization
+summary: 考虑到准备和度量， `Zero` 通过执行给定数量的试验，估算量化指标成功 (返回) 的频率。
 syntax: 'operation EstimateFrequency (preparation : (Qubit[] => Unit), measurement : (Qubit[] => Result), nQubits : Int, nMeasurements : Int) : Double'
 input:
   content: '(preparation : (Qubit[] => Unit), measurement : (Qubit[] => Result), nQubits : Int, nMeasurements : Int)'
@@ -44,16 +44,16 @@ output:
   content: Double
   types:
   - summary: >-
-      估计 $ \hat{p} $ of $M （P （\ket{00 \cdots 0} \bra{00 \cdots 0}）） $ `Zero`返回的频率，使用非偏置二项式估计器 $ \hat{p} = n\_{\uparrow}\_$ \text{measurements}}，其中 $n\_{\uparrow} $ 是观察到的`Zero`结果数。
+      估计 $ \hat{p} $ of $M (P ( \ket{00 \cdots 0} \bra{00 \cdots 0} ) # B3 $ 返回的频率 `Zero` ，使用无偏差二项式估计器 $ \hat{p} = n \_ {\uparrow}/n \_ {\text{measurements}} $，其中 $n \_ {\uparrow} $ 是 `Zero` 观察到的结果数。
 
 
       这对于遵守物理限制的目标计算机尤其重要，因此无法衡量概率。
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 973ab328d11410fee400659f18a99d50c1883156
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 008a3276e0df9c587f3262f4b5358a0831260ae4
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677738"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89354580"
