--- a/api/qsharp/microsoft.quantum.characterization.estimatefrequencya.yml
+++ b/api/qsharp/microsoft.quantum.characterization.estimatefrequencya.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.characterization.estimatefrequencya
 name: EstimateFrequencyA
 type: operation
-namespace: Microsoft.Quantum.Characterization
-summary: 对于 adjointable 和度量值的准备，通过执行给定数量的试验来估算度量成功（ `Zero`返回）的频率。
+namespace: microsoft.quantum.characterization
+summary: 对于 adjointable 和度量值的准备， `Zero` 通过执行给定数量的试验来估算度量成功 (返回) 的频率。
 remarks: 对于 adjointable 操作，可以执行某些假设，如调用操作时，会将 qubits 的状态准备为完全相同的状态，从而使目标计算机能够进行某种性能优化。
 syntax: 'operation EstimateFrequencyA (preparation : (Qubit[] => Unit is Adj), measurement : (Qubit[] => Result), nQubits : Int, nMeasurements : Int) : Double'
 input:
@@ -46,13 +46,13 @@ input:
 output:
   content: Double
   types:
-  - summary: 估计 $ \hat{p} $ of $M （P （\ket{00 \cdots 0} \bra{00 \cdots 0}）） $ `Zero`返回的频率，使用非偏置二项式估计器 $ \hat{p} = n\_{\uparrow}\_$ \text{measurements}}，其中 $n\_{\uparrow} $ 是观察到的`Zero`结果数。
+  - summary: '估计 $ \hat{p} $ of $M (P ( \ket{00 \cdots 0} \bra{00 \cdots 0} ) # B3 $ 返回的频率 `Zero` ，使用无偏差二项式估计器 $ \hat{p} = n \_ {\uparrow}/n \_ {\text{measurements}} $，其中 $n \_ {\uparrow} $ 是 `Zero` 观察到的结果数。'
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 064f6d3cf9c075d635ed27ac4192b5aa4045e4d8
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 00d54b9dec4e2b57002b04dda4072b9d186baba4
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677707"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89354529"
