--- a/api/qsharp/microsoft.quantum.extensions.math.maxd.yml
+++ b/api/qsharp/microsoft.quantum.extensions.math.maxd.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.math.maxd
 name: MaxD
 type: function
-namespace: Microsoft.Quantum.Extensions.Math
+namespace: microsoft.quantum.extensions.math
 summary: MaxD 已被弃用。 请改用 @"microsoft.quantum.math.maxd"。
 syntax: 'function MaxD (a : Double, b : Double) : Double'
 input:
@@ -20,9 +20,9 @@ output:
   - isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 9a140b40b5590ed3c3eab9906e7a9e601b577382
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 8f872c9566f3707d0855686aab942c25ea030f2a
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686236"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89348222"
