--- a/api/qsharp/microsoft.quantum.extensions.math.minb.yml
+++ b/api/qsharp/microsoft.quantum.extensions.math.minb.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.math.minb
 name: MinB
 type: function
-namespace: Microsoft.Quantum.Extensions.Math
+namespace: microsoft.quantum.extensions.math
 summary: MinB 已被弃用。 请改用 @"microsoft.quantum.math.minl"。
 syntax: 'function MinB (a : BigInt, b : BigInt) : BigInt'
 input:
@@ -20,9 +20,9 @@ output:
   - isPrimitive: true
     uid: BigInt
 metadata:
-  ms.openlocfilehash: c2f6bb3b7d4569153e1cb02103bf69918a193c5c
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 0ac6d9e0cd8961c64052142d9e884ae8ba03968c
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686225"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89348086"
