--- a/api/qsharp/microsoft.quantum.extensions.math.signb.yml
+++ b/api/qsharp/microsoft.quantum.extensions.math.signb.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.math.signb
 name: SignB
 type: function
-namespace: Microsoft.Quantum.Extensions.Math
+namespace: microsoft.quantum.extensions.math
 summary: SignB 已被弃用。 请改用 @"microsoft.quantum.math.signl"。
 syntax: 'function SignB (a : BigInt) : Int'
 input:
@@ -17,9 +17,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 98ed135f05b50082fc2973c62163bde4b32150b2
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: f232b3c2cc9a85caaba497eb07b9822a43e2b2c8
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686084"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89347899"
