--- a/api/qsharp/microsoft.quantum.simulation.trotterstep.yml
+++ b/api/qsharp/microsoft.quantum.simulation.trotterstep.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.simulation.trotterstep
 name: TrotterStep
 type: function
-namespace: Microsoft.Quantum.Simulation
-summary: '`EvolutionGenerator`使用 Trotter – Suzuki 分解中所述的系统实现一次时间演变。'
-remarks: 有关 Trotter – Suzuki 分解的详细信息，请参阅[按时间排序的组合](/quantum/libraries/control-flow#time-ordered-composition)。
+namespace: microsoft.quantum.simulation
+summary: 使用 Trotter – Suzuki 分解中所述的系统实现一次时间演变 `EvolutionGenerator` 。
+remarks: 有关 Trotter – Suzuki 分解的详细信息，请参阅 [按时间排序的组合](/quantum/libraries/control-flow#time-ordered-composition)。
 syntax: 'function TrotterStep (evolutionGenerator : Microsoft.Quantum.Simulation.EvolutionGenerator, trotterOrder : Int, trotterStepSize : Double) : (Qubit[] => Unit is Adj + Ctl)'
 input:
   content: '(evolutionGenerator : Microsoft.Quantum.Simulation.EvolutionGenerator, trotterOrder : Int, trotterStepSize : Double)'
@@ -23,7 +23,7 @@ input:
 output:
   content: (Qubit[] => Unit is Adj + Ctl)
   types:
-  - summary: 一项操作，该操作约为持续`trotterStepSize`时间演化的单个步骤。
+  - summary: 一项操作，该操作约为持续时间演化的单个步骤 `trotterStepSize` 。
     isOperation: true
     input:
       types:
@@ -38,9 +38,9 @@ output:
     - Adjoint
     - Controlled
 metadata:
-  ms.openlocfilehash: 7059972ad5494e7d2cd86c943314005f620ad60f
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 649c8cf249287df71297fd0ae1604fe6e4893f34
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82687216"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89328128"
