--- a/api/qsharp/microsoft.quantum.synthesis.applypermutationusingtransformation.yml
+++ b/api/qsharp/microsoft.quantum.synthesis.applypermutationusingtransformation.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.synthesis.applypermutationusingtransformation
 name: ApplyPermutationUsingTransformation
 type: operation
-namespace: Microsoft.Quantum.Synthesis
+namespace: microsoft.quantum.synthesis
 summary: >-
   使用基于转换的合成，将 amplitudes Permutes 为量程状态。
 
@@ -12,9 +12,9 @@ summary: >-
   算法以迭代方式执行以下步骤：
 
 
-  1. 查找 $x \ne \pi （x） = y $ 的最小 $x $。
+  1. 查找 $x \ne \pi (x) = y $ 的最小 $x $。
 
-  2. 查找多个受控制的 Toffoli 操作，这些操作应用于输出使 $ \pi （x） = x $ 和不会对所有 $x "< x $ 更改 $ \pi （x '） $
+  2. 查找多个受控制的 Toffoli 操作，这些操作应用于输出使 $ \pi (x) = x $，而不会更改所有 $x < x $ 的 $ \pi (x ' ) $
 examples: >-
   要合成 `SWAP` 操作：
 
@@ -53,9 +53,9 @@ functors:
 seeAlso:
 - microsoft.quantum.synthesis.applypermutationusingdecomposition
 metadata:
-  ms.openlocfilehash: e611197ba2fbfc0271c17664acc23b4de2c90ff6
-  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
+  ms.openlocfilehash: e69a5924fc2f0ba46b3764d0cd7619dc78332bd6
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/02/2020
-  ms.locfileid: "85886113"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89328009"
